# Musicgen-local-interface

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  PLAN.md  STYLE.md  build.sh  open.sh  quickdownloadACE.md  readme.md
.github/workflows/: build.yml
include/: tokenizer.hpp
installers/: download-models.sh
installers/linux/: build-deb.sh  install.sh
installers/macos/: build-pkg.sh
installers/macos/resources/: welcome.html
installers/windows/: download-models.ps1  installer.iss
plugins/MusicGen/: .gitmodules  CMakeLists.txt  DistrhoPluginInfo.h  Makefile  MusicGen.cpp  MusicGen.hpp  MusicGenUI.cpp  MusicGenUI.hpp  PluginParams.h  build.sh  build_dev.sh  clean.sh  draghandler.cpp  draghandler.h  sourceList.hpp
plugins/MusicGen/app/: Dockerfile  app.py  download.py  requirements.txt
plugins/MusicGen/src/: NanoButton.cpp  NumberInput.cpp  NumberInput.hpp  Panel.cpp  Panel.hpp  SimpleButton.cpp  SimpleButton.hpp  TextInput.cpp  TextInput.hpp  ValueIndicator.cpp  ValueIndicator.hpp  WAIVEColors.hpp  WAIVEWidget.hpp  fonts.h  space-grotesk.h
plugins/MusicGenVST/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
research/: exporters.py  models.py  mono_test.py  simple_export.ipynb  simple_export.py  test_model  test_mono.ipynb
research/T5Base/: config.json
research/bak/: audiocraft.ipynb  debug.ipynb  debug_decoder.ipynb  from_audiocraft.ipynb  load_small_model.ipynb  naked_model_export.py  simple_export_full_custom.ipynb  test.ipynb  test.pkl
research/nodejs/: main.js  package-lock.json  package.json
research/pybackend/: app.py  app.spec  test.ipynb
src/: processor.cpp  tokenizer.cpp
src/sentencepiece/: libsentencepiece.so.0.0.0  libsentencepiece_train.so.0.0.0
src/sentencepiece/pkgconfig/: sentencepiece.pc
